updated config files for laptop rebuild

--- a/dotfiles/rifle.conf
+++ b/dotfiles/rifle.conf
@@ -109,13 +109,13 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #--------------------------------------------
 # Video/Audio with a GUI
 #-------------------------------------------
+mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
 mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
 mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
 mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
 mime ^video,       has mplayer2, X, flag f = mplayer2 -fs -- "$@"
 mime ^video,       has mplayer,  X, flag f = mplayer -- "$@"
 mime ^video,       has mplayer,  X, flag f = mplayer -fs -- "$@"
-mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
 mime ^video|audio, has totem,    X, flag f = totem -- "$@"
 mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
 
@@ -138,6 +138,7 @@ ext xcf,                 X, flag f = gimp -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
+ext pdf, has foxitreader,  X, flag f = foxitreader "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf -- "$@"
